# paddleocr_inference

./: .gitignore  README.md  infer.sh  main.py
cpp_infer/: CMakeLists.txt  paddleocr_tensorrt.cpp
cpp_infer/apps/: CMakeLists.txt  main.cpp
cpp_infer/include/: ocr_cls.h  ocr_det.h  ocr_rec.h  postprocess_op.h
cpp_infer/paddle/: paddle_inference_api.h
cpp_infer/src/: CMakeLists.txt  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
paddleocr/tools/infer/: predict_rec.py
